# MemoryHub

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: context_budgeting.ipynb
schema/: frontmatter.schema.json
src/memoryhub/: __init__.py  bundle.py  cli.py  config.py  embeddings.py  export.py  hub.py  ids.py  index.py  loader.py  mcp_server.py  models.py  profiles.py  query.py  tokens.py  writer.py
src/memoryhub/profiles/: personal.yaml
templates/: bio.md  education.md  experience.md  goal.md  preference.md  project.md  skill.md  writing.md
tests/: conftest.py  eval_queries.yaml  test_bundle.py  test_cli.py  test_config.py  test_embeddings.py  test_eval.py  test_export.py  test_hub.py  test_hub_search.py  test_ids.py  test_index.py  test_loader.py  test_mcp_server.py  test_models.py  test_profiles.py  test_query.py  test_stubs.py  test_writer.py
